as player